# transcript-search

./: AGENTS.md  CLAUDE.md  Cargo.toml  GEMINI.md  LICENSE  PROJECT.md  README.md
deploy/: blackbox.service
design/: knowledge-store.md
examples/: README.md
examples/agents/: session-searcher.md
examples/skills/: crucible.md  overmind.md  takeover.md
src/: cli.rs  inbox.rs  index.rs  knowledge.rs  main.rs  notes.rs  parser.rs  render.rs  threads.rs  tool_docs.rs  util.rs
src/index/: helpers.rs  mod.rs  reindex.rs  search.rs
src/orchestration/: brofile.rs  mcp.rs  mod.rs  providers.rs  tail.rs  team.rs
