[package]
name = "transcript-search"
version = "0.1.0"
edition = "2021"

[dependencies]
tantivy = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"
dirs = "6"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
opt-level = 3
lto = "thin"
