[package]
name = "blackbox"
version = "0.2.0"
edition = "2021"

[[bin]]
name = "blackboxd"
path = "src/main.rs"

[[bin]]
name = "bro"
path = "src/cli.rs"

[dependencies]
# Search index
tantivy = "0.22"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "0.8"

# Filesystem
walkdir = "2"
dirs = "6"

# Error handling
anyhow = "1"

# Fast non-poisoning locks
parking_lot = "0.12"

# Enum ↔ string derives (FromStr, Display, AsRefStr) — replaces
# hand-rolled from_str/as_str match blocks.
strum = { version = "0.26", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

# Time
chrono = "0.4"

# Async runtime
tokio = { version = "1", features = ["full"] }

# MCP SDK
rmcp = { version = "1.4", features = ["server", "macros", "transport-streamable-http-server"] }
tokio-util = { version = "0.7", features = ["rt"] }

# HTTP server (for /tail endpoint outside MCP)
axum = "0.8"

# IDs
uuid = { version = "1", features = ["v4"] }

# CLI HTTP client
reqwest = { version = "0.12", features = ["stream", "rustls-tls", "json"], default-features = false }
futures-util = "0.3"
futures = "0.3"

# Terminal
crossterm = "0.28"
ratatui = { version = "0.29", features = ["unstable-rendered-line-info"] }
# tui-markdown returns ratatui-core types; declared explicitly here so we
# can name them when converting into ratatui's parallel Line/Span/Style.
# (ratatui 0.29 still carries its own copies of these types rather than
# re-exporting from ratatui-core.)
ratatui-core = "0.1"
tui-markdown = "0.3"

# SSE stream construction
async-stream = "0.3"

# Process management (SIGTERM)
libc = "0.2"

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = 3
lto = "thin"
